<resources>
    <string name="app_name">Vancomycin</string>
    <string name="title_home">This app is not a substitute for professional judgment.  Please use care and double-check all values before administering vancomycin to patients.</string>
    <string name="title_dashboard">AUC calculator</string>
    <string name="title_notifications">Notifications</string>
    <string name="calculate_initial_dose">Calculate initial dose</string>
    <string name="input_patient_data_to_estimate_initial_auc_targeted_dosing_regimen">Input patient data to estimate initial AUC-targeted dosing regimen</string>
    <string name="chosen_goal_auc24">Chosen Goal AUC24</string>
    <string name="input_goal">Input goal</string>
    <string name="crcl_ml_min">CrCl (ml/min)</string>
    <string name="input_crcl">Input CrCl</string>
    <string name="total_body_weight_kg">Total body weight (kg)</string>
    <string name="input_weight_in_kg">Input weight in kg</string>
    <string name="age">Age</string>
    <string name="input_age_in_years">Input age in years</string>
    <string name="scr">SCr</string>
    <string name="input_scr">Input SCr</string>
    <string name="sex">Sex</string>
    <string name="obese_bmi_30">Obese (BMI ≥ 30)</string>
    <string name="cns_infection">CNS infection</string>
    <string name="calculate_dose">Calculate dose</string>
    <string name="adjusts_goal_auc_to_600">Adjusts goal AUC to 600</string>
    <string name="estimated_initial_dose">Estimated initial dose</string>
    <string name="auc_based_dosing">AUC-based dosing</string>
    <string name="_400">400</string>
    <string name="auc_value">AUC value</string>
    <string name="weight_based_obesity_dosing_crcl_50_alternative_dosing"><![CDATA[Weight-based obesity dosing (CrCl > 50, alternative dosing)]]></string>
    <string name="estimated_daily_dose_bmi_between_30_and_39_9">Estimated daily dose (BMI from 30 to 39.9)</string>
    <string name="estimated_daily_dose_bmi_40_and_above">Estimated daily dose (BMI 40 and above)</string>
    <string name="_25_mg_kg_d">25 mg/kg/d</string>
    <string name="_30_mg_kg_d_upper_limit">30 mg/kg/d (upper limit)</string>
    <string name="_30_20">30-20</string>
    <string name="_30_25">30-25</string>
    <string name="_15_mg_kg_d">15 mg/kg/d</string>
    <string name="_25_mg_kg_d_upper_limit">25 mg/kg/d (upper limit)</string>
    <string name="_30_30">30-30</string>
    <string name="_40_15">40-15</string>
    <string name="_40_20">40-20</string>
    <string name="_40_25">40-25</string>
    <string name="_20_mg_kg_d">20 mg/kg/d</string>
    <string name="_20_mg_kg_d_30bmi">20 mg/kg/d</string>
    <string name="calculated_values">Calculated values</string>
    <string name="ke_label">computed ke</string>
    <string name="calculated_ke_label">ke</string>
    <string name="calculated_half_life_label">Half-life (hr)</string>
    <string name="computed_half_life">computed half-life</string>
    <string name="calculated_vd_label">Vd</string>
    <string name="computed_vd">computed Vd</string>
    <string name="calculated_clvanco_l_hr_label">Clvanco (L/hr)</string>
    <string name="computed_clvanco">computed Clvanco</string>
    <string name="initial_dose_navbar">Initial dose</string>
    <string name="calculate_auc_dose">Calculate AUC dose</string>
    <string name="input_initial_dose_measured_peak_and_measured_trough_to_estimate_auc">Input initial dose, measured peak, and measured trough to estimate AUC</string>
    <string name="auc_initial_dose_mg">Initial dose (mg)</string>
    <string name="auc_initial_dosing_frequency_hr">Initial dosing frequency (hr)</string>
    <string name="auc_input_initial_dose_freq">Input initial dose freq</string>
    <string name="auc_input_initial_dose">Input initial dose</string>
    <string name="auc_infusion_duration_hr">Infusion duration (hr)</string>
    <string name="auc_initial_dosing_title">Initial dosing</string>
    <string name="auc_assessment">AUC assessment</string>
    <string name="auc_based_on_paired_levels_drawn_after_a_dose">Based on paired levels drawn after a dose</string>
    <string name="auc_date_of_preceeding_dose">Date of preceding dose</string>
    <string name="auc_input_date">Input date</string>
    <string name="auc_time_of_preceeding_dose">Time of preceding dose</string>
    <string name="auc_input_time">Input time</string>
    <string name="AUC_preceding_dose_label">Preceding dose</string>
    <string name="AUC_level_1_peak">Level 1 (Peak)</string>
    <string name="AUC_date_of_level_1">Date of Level 1</string>
    <string name="AUC_time_of_level_1">Time of Level 1</string>
    <string name="AUC_level_2_trough">Level 2 (Trough)</string>
    <string name="AUC_date_of_level_2">Date of Level 2</string>
    <string name="AUC_time_of_level_2">Time of Level 2</string>
    <string name="AUC_patient_parameters">Patient parameters</string>
    <string name="AUC_dose_revision">Dose revision</string>
    <string name="AUC_chosen_dose_mg">Chosen dose (mg)</string>
    <string name="AUC_input_chosen_dose">Input chosen dose</string>
    <string name="AUC_chosen_dosing_interval_hr">Chosen dosing interval (hr)</string>
    <string name="AUC_input_dosing_interval">Input dosing interval</string>
    <string name="AUC_infusion_duration_hr">Infusion duration (hr)</string>
    <string name="AUC_input_infusion_duration">Input infusion duration</string>
    <string name="AUC_calculate_dosing">Calculate revised dose</string>
    <string name="AUC_vd_l">Vd (L)</string>
    <string name="AUC_computed_vd">computed Vd</string>
    <string name="AUC_computed_ke">computed ke</string>
    <string name="AUC_ke_hours_1">ke (hours - 1)</string>
    <string name="AUC_true_peak">True peak</string>
    <string name="AUC_computed_peak">computed peak</string>
    <string name="AUC_true_trough">True trough</string>
    <string name="AUC_computed_trough">computed trough</string>
    <string name="AUC_estimated_auc">Estimated AUC</string>
    <string name="AUC_computed_auc24">computed AUC24</string>
    <string name="AUC_calculated_auc24">Calculated AUC24</string>
    <string name="AUC_estimated_revised_dose">Estimated revised dose</string>
    <string name="AUC_recommended_revised_dose_mg">Recommended revised dose (mg)</string>
    <string name="AUC_computed_revised_dose">computed revised dose</string>
    <string name="recomAUC_mended_revised_dosing_interval_hr">Recommended revised dosing interval (hr)</string>
    <string name="AUC_computed_dosing_interval">computed dosing interval</string>
    <string name="AUC_predicted_auc24_based_on_chosen_dose">Predicted AUC24 based on chosen dose</string>
    <string name="AUC_predicted_trough_based_on_chosen_dose">Predicted trough based on chosen dose</string>
    <string name="AUC_predicted_peak_based_on_chosen_dose">Predicted peak based on chosen dose</string>
    <string name="AUC_measured_level_1_peak">Measured level 1 (peak)</string>
    <string name="AUC_input_measured_peak">Input measured peak</string>
    <string name="AUC_measured_level_2_trough">Measured level 2 (trough)</string>
    <string name="AUC_input_measured_trough">Input measured trough</string>
    <string name="input_crcl_manually">Input CrCl manually</string>
    <string name="AUC_calculate_initial_dose_estimate">Calculate initial dose estimate</string>
    <string name="AUC_calculate_auc_revision">Calculate AUC Revision</string>
    <string name="AUC_suggest_a_revised_dose">Suggest a revised dose (Optional)</string>
    <string name="AUC_patient_parameters_info_text">Calculate a revised dose and revised dosing interval, then inserts those values in the dose revision section below.</string>
</resources>
